--- a/src/asset/common-styles/variables.scss
+++ b/src/asset/common-styles/variables.scss
@@ -57,3 +57,4 @@ $transiton: all 0.3s;
 $box-shadow-default: 1px 1px 6px 2px $color-main-blue_hover;
 
 $header-height: 108px;
+$filterGroupButton-height: 70px;
