--- a/src/components/common/Popup/popup.module.scss
+++ b/src/components/common/Popup/popup.module.scss
@@ -13,7 +13,7 @@
   z-index: 1000;
   transition: $transiton;
   pointer-events: none;
-  
+  cursor: default;
   &_container {
     z-index: 10;
     width: 100%;
@@ -24,16 +24,18 @@
     transition: $transiton;
     padding-top: 50px;
   }
-  &_container__small{
+  &_container__small {
     height: fit-content;
     padding-top: 10px;
   }
   &_content {
-    
     height: 100%;
     display: flex;
     flex-direction: column;
     &_top {
+      & h2 {
+        color: $color-main-black;
+      }
       @extend %display-between;
       gap: $gap;
       margin-bottom: 20px;
@@ -65,13 +67,13 @@
     transform: translate(0, 0);
   }
 }
-.content{
+.content {
   padding-bottom: 20px;
   display: block;
   max-height: 100%;
   overflow: auto;
-  
-  & img{
+
+  & img {
     float: left;
     padding: 20px;
   }
