--- a/src/screens/ObjectScreen/objectScreen.module.scss
+++ b/src/screens/ObjectScreen/objectScreen.module.scss
@@ -1,10 +1,9 @@
 .underHeader {
-  &_ctn {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 32px 0 64px 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 32px 0 64px 0;
+
   &_breadcrump {
   }
   &_groupButtons {
@@ -31,52 +30,49 @@
     }
   }
 }
-.title {
+.titleBlock {
+  display: flex;
+  justify-content: space-between;
   &_ctn {
-    display: flex;
-    justify-content: space-between;
   }
 
-  &_block {
+  &_left {
     display: flex;
     flex-direction: column;
     // align-items: center;
     gap: $gap-small;
-    &_titleCtn {
-      display: flex;
-      // align-items: center;
-      gap: $gap-medium;
-    }
-    &_rate {
-      // padding: 10px;
-      width: fit-content;
-      // background-color: $color-additional-background;
-      border-radius: $border-radius-20;
-      &_icon {
-        margin-bottom: 2px;
-        font-size: 16px;
-      }
-    }
-
-    & h3 {
-      text-wrap: nowrap;
-    }
-    &_register {
-      display: flex;
-      @extend %Text14;
-      align-items: center;
-    }
-  }
-  &_iconCheck {
-    font-size: 18px;
-    color: $color-main-blue;
-    margin-right: 4px;
   }
   &_right {
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
   }
+  &_title {
+    display: flex;
+    gap: $gap-medium;
+    & h1 {
+      @extend %Title;
+    }
+  }
+  &_class {
+    width: fit-content;
+    border-radius: $border-radius-20;
+    &_icon {
+      margin-bottom: 2px;
+      font-size: 16px;
+    }
+  }
+  &_register {
+    display: flex;
+    @extend %Text14;
+    align-items: center;
+  }
+  &_iconCheck {
+    font-size: 18px;
+    color: $color-main-blue;
+    margin-right: 4px;
+  }
+
   &_type {
   }
   &_rating {
@@ -86,14 +82,13 @@
   &_location {
   }
 }
-.underTitle {
-  &_ctn &_list {
+.navBar {
+  & &_list {
     margin: 48px 0;
     display: flex;
     gap: 48px;
     &_item {
       @extend %Text18;
-      text-wrap: nowrap;
       position: relative;
       transition: $transiton;
       &:hover {
@@ -279,26 +274,25 @@
 }
 @include mediaTablet {
   .underHeader {
-    &_ctn {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: $gap-small;
-      margin: 32px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: start;
+    flex-wrap: wrap;
+    gap: 32px;
+    margin: 32px 0;
+  }
+  .titleBlock {
+    flex-direction: column;
+    gap: $gap-big;
+    &_right {
+      gap: $gap-medium;
     }
   }
-  .title {
-    &_ctn {
-      flex-direction: column;
-      gap: 32px;
-    }
-  }
-  .underTitle {
-    &_ctn &_list {
-      padding-bottom: 7px;
+  .navBar {
+    & &_list {
       flex-wrap: wrap;
-      gap: $gap-big;
+      gap: $gap-medium;
     }
   }
   .info {
