--- a/src/components/common/Cards/CardList/cardList.module.scss
+++ b/src/components/common/Cards/CardList/cardList.module.scss
@@ -7,19 +7,16 @@
   border-radius: $border-radius-20;
 }
 .image {
-  &_ctn {
-    border-radius: 12px;
-    overflow: hidden;
-    position: relative;
-  }
+  border-radius: 12px;
+  overflow: hidden;
+  position: relative;
 
   &_image {
-    // height: 320px;
-    // width: auto;
     max-height: 200px;
     width: 100%;
     min-width: 100%;
     object-fit: cover;
+    aspect-ratio: 16 / 9;
   }
   &_type {
     z-index: 1;
@@ -39,26 +36,6 @@
       border-radius: 6px;
       transition: $transiton;
       cursor: pointer;
-      &:hover {
-        background-color: $color-main-blue_hover;
-      }
-    }
-    &_icon {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: $color-main-blue;
-      transition: $transiton;
-      cursor: pointer;
-      &_icon {
-        font-size: 18px;
-      }
-      &:active &_icon {
-        transform: scale(1.3);
-      }
       &:hover {
         background-color: $color-main-blue_hover;
       }
@@ -121,6 +98,29 @@
     // margin-top: -10px;
   }
 }
+.imageButton {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-main-blue;
+  transition: $transiton;
+  cursor: pointer;
+  &_icon {
+    font-size: 18px;
+  }
+  &:active &_icon {
+    transform: scale(1.3);
+  }
+  &:hover {
+    background-color: $color-main-blue_hover;
+  }
+  &_active {
+    color: $color-main-gold;
+  }
+}
 .rateHotel {
   display: flex;
   align-items: center;
@@ -134,8 +134,29 @@
 .rateCafe {
   font-size: 14px;
 }
-@media screen and (max-width: $media-phone) {
+
+@include mediaPhone {
   .card {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+  }
+  .image {
+    &_image {
+      height: 100%;
+      max-height: none;
+    }
+    &_type {
+      height: 100%;
+      flex-direction: column-reverse;
+      align-items: end;
+      justify-content: space-between;
+      padding: 5px;
+      &_text {
+        padding: 5px 8px;
+      }
+    }
+  }
+  .imageButton_share {
+    display: none;
   }
 }
