--- a/src/components/common/Gallery/gallery.module.scss
+++ b/src/components/common/Gallery/gallery.module.scss
@@ -64,6 +64,7 @@
     position: relative;
     transition: $transiton;
     cursor: pointer;
+
     &:hover {
       transform: scale(1.02);
       box-shadow: $box-shadow-default;
@@ -76,10 +77,12 @@
   }
 }
 .button_watchAll {
+  @extend %Text12;
   position: absolute;
   top: 0;
   left: 0;
-  margin: 20px;
+  margin: 10px;
+  padding: 5px;
   z-index: 1;
 }
 @include mediaTablet {
@@ -104,7 +107,8 @@
   }
   .image__additional {
     width: 100%;
-    height: 264px;
+    height: 100%;
+    aspect-ratio: 16 / 9;
     & img {
       transform: scale(1);
     }
