status:go to vacation

--- a/src/asset/common-styles/variables.scss
+++ b/src/asset/common-styles/variables.scss
@@ -9,7 +9,7 @@ $color-main-white: #ffffff;
 $color-main-grey: rgba(124, 124, 124, 1);
 $color-main-grey-light: #f4f4f4;
 $color-overlay: rgba(0, 0, 0, 0.3);
-
+$color-blur-black: rgb(79 79 79 / 50%);
 $color-main-blue_hover: #237fc6;
 
 $color-gradient-bg-banner: linear-gradient(
