--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -12,9 +12,9 @@
   //   "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
   //   "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  // --foreground-rgb: 0, 0, 0;
+  // --background-start-rgb: 214, 219, 220;
+  // --background-end-rgb: 255, 255, 255;
 
   // --primary-glow: conic-gradient(
   //   from 180deg at 50% 50%,
@@ -133,11 +133,11 @@ input {
     outline: none;
   }
 }
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     color-scheme: dark;
+//   }
+// }
 h1 {
   font-size: 120px;
   font-weight: 700;
