--- a/src/components/common/Cards/CardList/cardList.module.scss
+++ b/src/components/common/Cards/CardList/cardList.module.scss
@@ -7,16 +7,21 @@
   border-radius: $border-radius-20;
 }
 .image {
-  border-radius: 12px;
-  overflow: hidden;
   position: relative;
+  max-height: 200px;
 
-  &_image {
-    max-height: 200px;
+  aspect-ratio: 16 / 9;
+  &_link {
+    display: block;
+    overflow: hidden;
+    position: relative;
     width: 100%;
+    height: 100%;
     min-width: 100%;
+    border-radius: 12px;
+  }
+  &_image {
     object-fit: cover;
-    aspect-ratio: 16 / 9;
   }
   &_type {
     z-index: 1;
