--- a/src/components/common/Cards/CardNews/cardNews.module.scss
+++ b/src/components/common/Cards/CardNews/cardNews.module.scss
@@ -24,11 +24,12 @@
     max-height: 320px;
     position: relative;
     display: flex;
-
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9;
     &_image {
-      width: 100%;
-      height: 100%;
-      max-height: 320px;
+      // max-width: 100%;
+      // max-height: 320px;
       object-fit: cover;
     }
   }
@@ -41,8 +42,10 @@
     padding: 20px;
 
     &_title {
-      // margin-bottom: 20px;
-      // line-height: 24px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
       @extend %Text18;
       font-weight: 700;
     }
@@ -82,9 +85,11 @@
   }
   & .image {
     max-height: 85px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 12;
     &_image {
-      width: 100%;
-      height: 100%;
       object-fit: cover;
     }
   }
@@ -113,6 +118,10 @@
     & .image {
       max-height: none;
       height: 200px;
+      &:hover {
+        box-shadow: none;
+        transform: none;
+      }
     }
   }
 }
