--- a/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
+++ b/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
@@ -1,17 +1,19 @@
 @import "/src/asset/common-styles/";
 .card {
   width: 100%;
-  // grid-template-rows: 220px 1fr;
+  display: grid;
+  grid-template-rows: auto 1fr;
   gap: 16px;
   &_image {
-    max-height: 220px;
+    // max-height: 220px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
     &_image {
-      aspect-ratio: 16 / 9;
-      width: 100%;
-      height: 100%;
       object-fit: cover;
     }
     &_type {
