--- a/src/components/common/Cards/CardSliderMainPage/cardSliderMainPage.module.scss
+++ b/src/components/common/Cards/CardSliderMainPage/cardSliderMainPage.module.scss
@@ -11,11 +11,16 @@
   border-radius: 12px;
   overflow: hidden;
   position: relative;
-  &_image {
+  &_link {
+    display: block;
+    overflow: hidden;
+    position: relative;
     height: 100%;
     width: 100%;
     aspect-ratio: 16 / 9;
     min-width: 100%;
+  }
+  &_image {
     object-fit: cover;
   }
   &_type {
