--- a/src/screens/ObjectScreen/objectScreen.module.scss
+++ b/src/screens/ObjectScreen/objectScreen.module.scss
@@ -290,7 +290,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 32px;
     margin: 32px 0;
