--- a/src/screens/MainScreen/mainScreen.module.scss
+++ b/src/screens/MainScreen/mainScreen.module.scss
@@ -1,7 +1,7 @@
-.banner {
+.commercial {
   position: relative;
   //   border-radius: $border-radius-20;
-  overflow: hidden;
+  // overflow: hidden;
 
   & img {
     width: 100%;
@@ -20,7 +20,7 @@
   .cardNews {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
     gap: $gap-big;
     background-color: $color-additional-background;
     border-radius: $border-radius-10;
@@ -34,7 +34,7 @@
       &_img {
         aspect-ratio: 16 / 9;
         width: 100%;
-        height: 100%;
+        height: auto;
         object-fit: cover;
         transition: $transiton;
       }
@@ -48,10 +48,19 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      gap: $gap-medium;
 
       &_title {
         height: fit-content;
         @extend %Text18;
+        @include textCut(3);
+      }
+      &_additional {
+        display: flex;
+        justify-content: space-between;
+        gap: $gap-small;
+        @extend %Text12;
+        color: $color-main-grey;
       }
       &_date {
       }
@@ -61,10 +70,12 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     grid-column: 1/4;
-    // background-color: red;
     .cardNews_content {
       justify-content: center;
       gap: $gap-big;
+    }
+    .cardNews_image_img {
+      height: 100%;
     }
   }
 }
@@ -73,21 +84,21 @@
   grid-template-columns: repeat(3, 1fr);
   gap: $gap-big;
   .cardRecommend {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: auto 1fr;
     gap: $gap-big;
     background-color: $color-additional-background;
     border-radius: $border-radius-10;
     overflow: hidden;
     &_image {
+      display: flex;
       width: 100%;
-      height: 100%;
       position: relative;
       overflow: hidden;
       &_img {
         aspect-ratio: 16 / 9;
         width: 100%;
-        height: 100%;
+        height: auto;
         object-fit: cover;
         transition: $transiton;
       }
@@ -101,10 +112,18 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
+      gap: $gap-big;
       &_title {
         height: fit-content;
         @extend %Text18;
+        @include textCut(3);
+      }
+      &_additional {
+        display: flex;
+        justify-content: space-between;
+        gap: $gap-small;
+        @extend %Text12;
+        color: $color-main-grey;
       }
       &_date {
       }
@@ -149,7 +168,7 @@
         margin: 20px 10px;
         border-radius: $border-radius-10;
         color: $color-main-white;
-        text-shadow: 1px 1px 1px black;
+        text-shadow: 1px 1px 1px $color-main-black;
         font-weight: 700;
         width: fit-content;
       }
@@ -161,12 +180,17 @@
     display: flex;
     flex-direction: column;
     .cardNews {
+      height: 100%;
       grid-template-columns: 1fr 2fr;
       grid-template-rows: 1fr;
-
+      gap: $gap-small;
+      &_image_img {
+        height: 100%;
+      }
       &_content {
         padding: 7px 5px;
         gap: $gap-small;
+
         &_date,
         &_title {
         }
@@ -184,6 +208,9 @@
         height: fit-content;
         color: $color-main-white;
         background-color: $color-blur-black;
+        &_additional {
+          color: $color-main-white;
+        }
       }
     }
   }
@@ -193,13 +220,10 @@
     .cardRecommend {
       grid-template-columns: 1fr 2fr;
       grid-template-rows: 1fr;
-
+      gap: $gap-small;
       &_content {
         padding: 7px 5px;
         gap: $gap-small;
-        &_date,
-        &_title {
-        }
       }
     }
     .cardRecommend:first-child {
@@ -214,6 +238,9 @@
         height: fit-content;
         color: $color-main-white;
         background-color: $color-blur-black;
+        &_additional {
+          color: $color-main-white;
+        }
       }
     }
   }
@@ -238,16 +265,12 @@
 @include mediaPhone {
   .news_content {
     .cardNews {
-      grid-template-columns: auto 1fr;
-      grid-template-rows: 1fr;
-      gap: $gap-small;
+      // grid-template-columns: auto 1fr;
+      // grid-template-rows: 1fr;
+      // gap: $gap-small;
       &_content {
         &_title,
         &_date {
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
           font-size: 12px;
           line-height: 1.2em;
         }
@@ -256,21 +279,6 @@
   }
   .recommend_content {
     .cardRecommend {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: 1fr;
-      gap: $gap-small;
-      &_content {
-        &_title,
-        &_date {
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          font-size: 12px;
-          line-height: 1.2em;
-        }
-      }
     }
   }
 }
