--- a/src/screens/EstablishmentScreen/establishmentScreen.module.scss
+++ b/src/screens/EstablishmentScreen/establishmentScreen.module.scss
@@ -94,7 +94,7 @@
       cursor: pointer;
       text-decoration: underline;
       text-underline-offset: 8px;
-      
+
       // padding-bottom: 10px;
       // &::before {
       //   content: "";
@@ -181,8 +181,13 @@
   }
   .info_description {
     @extend %Text14;
+
     padding-bottom: 20px;
     border-bottom: 1px solid rgba(217, 217, 217, 1);
+    &_text {
+      @include textCut(4);
+      margin-bottom: 20px;
+    }
   }
   & .info_queryList {
     display: grid;
