test:api to server 14

--- a/src/components/common/ButtonFunctional/buttonFunctional.module.scss
+++ b/src/components/common/ButtonFunctional/buttonFunctional.module.scss
@@ -110,6 +110,7 @@
       &_item {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         gap: $gap-small;
         transition: $transiton;
         color: $color-main-black;
