--- a/src/screens/FilterScreen/filterScreen.module.scss
+++ b/src/screens/FilterScreen/filterScreen.module.scss
@@ -14,7 +14,7 @@
         position: sticky;
         // top: $header-height;
         top: $header-height;
-        max-height: calc(100vh - $header-height - 100px);
+        max-height: calc(100vh - $header-height - 5px);
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
@@ -24,6 +24,9 @@
         border-radius: 20px;
         height: fit-content;
         overflow: auto;
+        &::-webkit-scrollbar-thumb {
+            background-color: $color-main-blue;
+        }
     }
     &_content {
         // max-width: 70vw;
